Dynamically add driver path to classpath